docs/v7.1.2/classes/E71.md
---
layout: page
title: E71 Chose élaborée par l’humain
titleEn: E71 Human-Made Thing - Chose élaborée par l’humain
permalink: /v7.1.2/classes/E71
sidebar: v712
group: classes
date: 2023-12-22
---

**Date de création** : 2023-11-08

**Dernière mise à jour** : 2023-12-22

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Sous-classe de</strong></p></td>
<td class="en">
<p>E70 Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E70_Chose</code> </p>
</td>
</tr>
<tr>
<td><p><strong>Super-classe de</strong></p></td>
<td class="en">
<p>E24 Physical Human-Made Thing</p>
<p>E28 Conceptual Object</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E24_Chose_matérielle_élaborée_par_l’humain</code> </p>
<p><code class="language-plaintext highlighter-rouge">E28_Objet_conceptuel</code> </p>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This class comprises discrete, identifiable human-made items that are documented as single units.</p>
<p>These items are either intellectual products or human-made physical things, and are characterized by relative stability. They may for instance have a solid physical form, an electronic encoding, or they may be logical concepts or structures.</p>
</td>
<td>
<p>Cette classe comprend les entités élaborées par l’humain distinctes et identifiables qui sont documentées comme des éléments uniques.</p>
<p>Ces entités sont soit des produits de l’intellect ou des choses physiques élaborées par l’humain et sont caractérisées par une certaine stabilité. Elles peuvent, par exemple, prendre une forme matérielle physique et solide, être un encodage électronique ou être des concepts ou structures logiques.</p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>Beethoven’s 5th Symphony (E73) (Lockwood, 2015)</p>
</li>
<li><p>Michelangelo’s David (E22) (Paoletti and Bagemihl, 2015)</p>
</li>
<li><p>Einstein’s Theory of General Relativity (E89) (Hartle, 2003)</p>
</li>
<li><p>the taxon ‘Fringilla cœlebs Linnæus,1758’ (E55) (Sinkevicius and Narusevicius, 2002)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>La cinquième symphonie de Beethoven (<code class="language-plaintext highlighter-rouge">E73_Objet_informationnel</code>) (Lockwood, 2015)</p>
</li>
<li><p>Le David de Michel-Ange (<code class="language-plaintext highlighter-rouge">E22_Objet_élaboré_par_l’humain</code>) (Paoletti & Bagemihl, 2015)</p>
</li>
<li><p>La théorie de la relativité générale d’Einstein (<code class="language-plaintext highlighter-rouge">E89_Objet_propositionnel</code>) (Hartle, 2003)</p>
</li>
<li><p>Le taxon « Fringilla cœlebs Linnæus,1758 » (<code class="language-plaintext highlighter-rouge">E55_Type</code>) (Sinkevicius & Narusevicius, 2002)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<p>E71(x) ⇒ E70(x)</p>
</td>
<td>
<p>E71(x) ⇒ E70(x)</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
<p>P102 has title (is title of): E35 Title</p>
<p>   (P102.1 has type: E55 Type)</p>
<p>P103 was intended for (was intention of): E55 Type</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">P102_a_pour_titre (est_le_titre_de)</code> : <code class="language-plaintext highlighter-rouge">E35_Titre</code></p>
<p>   (<code class="language-plaintext highlighter-rouge">P102.1_a_pour_type</code> : <code class="language-plaintext highlighter-rouge">E55_Type</code>)</p>
<p><code class="language-plaintext highlighter-rouge">P103_a_eu_pour_raison_d'être (a_été_la_raison_d'être_de)</code> : <code class="language-plaintext highlighter-rouge">E55_Type</code></p>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p><em></em></p>
</td>
</tr>
</tbody>
</table>
